<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">CareTogether</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="add_values">Add values to the chart</string>
    <string name="x">X</string>
    <string name="y">Y</string>
    <string name="add">Add</string>
    <string name="new_series">New series</string>


</resources>
