<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:orientation="vertical" android:layout_width="fill_parent"
              android:layout_height="fill_parent"

    >
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:orientation="horizontal"
        android:background="#0066cc"
        >
        <Button
            android:id="@+id/write"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1.3"
            android:text="기록하기"
            android:textSize="6pt"
            android:background="#0066cc"
            android:textColor="#ffffffff"
            ></Button>
        <Button
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:layout_gravity="center"
            android:text="CareTogether"
            android:textSize="8pt"
            android:textColor="#003399"
            android:background="#fff0f8ff"
            ></Button>
        <Button
            android:id="@+id/logout2"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1.3"
            android:text="로그아웃"
            android:textSize="6pt"
            android:background="#0066cc"
            android:textColor="#ffffffff"
            ></Button>
    </LinearLayout>
    <TextView android:layout_width="wrap_content" android:layout_height="wrap_content"
              android:text="@string/add_values"/>

    <LinearLayout android:orientation="horizontal"
                  android:layout_width="fill_parent"
                  android:layout_height="wrap_content">
        <TextView android:layout_width="wrap_content"
            android:layout_height="wrap_content"
                  android:text="@string/x" android:padding="5dip"/>
        <EditText android:id="@+id/xValue"
            android:layout_width="wrap_content"
                  android:inputType="number"
                  android:layout_height="wrap_content"
            android:layout_weight="1"
            android:enabled="false"/>
        <TextView android:layout_width="wrap_content"
            android:layout_height="wrap_content"
                  android:text="@string/y"
            android:padding="5dip"/>
        <EditText android:id="@+id/yValue"
            android:layout_width="wrap_content"
                  android:inputType="number"
                  android:layout_height="wrap_content"
            android:layout_weight="1"
            android:enabled="false"/>
        <Button android:id="@+id/add"
            android:text="@string/add"
                android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:enabled="false"/>
    </LinearLayout>

    <LinearLayout android:id="@+id/chart"
        android:orientation="horizontal"
                  android:layout_width="fill_parent"
        android:layout_height="0dip"
        android:layout_weight="1"/>

    <LinearLayout android:orientation="horizontal"
                  android:layout_width="fill_parent"
        android:layout_height="wrap_content">
        <Button android:id="@+id/new_series"
            android:text="@string/new_series"
                android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>
    </LinearLayout>

</LinearLayout>
